<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/text_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_30"
        android:fontFamily="@font/lato_bold"
        android:gravity="start"
        android:text="@string/ng_k"
        android:textColor="#4356B4"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/image_back"
        app:layout_constraintTop_toBottomOf="@+id/image_back" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/h_v_t_n"
        android:textColor="#999999"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/edit_name"
        app:layout_constraintEnd_toEndOf="@id/text_register"
        app:layout_constraintStart_toStartOf="@id/image_back"
        app:layout_constraintTop_toBottomOf="@+id/text_register" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#676767"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text_email"
        app:layout_constraintEnd_toEndOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        tools:ignore="Autofill" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_10"
        android:src="@drawable/ic_name"
        app:layout_constraintBottom_toBottomOf="@+id/edit_name"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/edit_name"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintTop_toTopOf="@id/edit_name"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/email"
        android:textColor="#999999"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/yourname_gmail_com"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#676767"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/text_password"
        app:layout_constraintEnd_toEndOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        tools:ignore="Autofill" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.03"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@drawable/ic_mail_login"
        app:layout_constraintBottom_toBottomOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/text_email"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:fontFamily="@font/lato_regular"
        android:text="@string/m_t_kh_u"
        android:textColor="#999999"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/text_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#676767"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_password"
        tools:ignore="Autofill" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_password"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintBottom_toBottomOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="@+id/edit_password"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        tools:ignore="ContentDescription" />

    <TableRow
        android:id="@+id/tr_agree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@id/edit_password">

        <ImageView
            android:id="@+id/iv_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/bg_check"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/t_i_ng_v_i_c_c"
            android:textColor="#999999"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_2"
            android:fontFamily="@font/lato_bold"
            android:text="@string/ch_nh_s_ch"
            android:textColor="#4356B4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_2"
            android:fontFamily="@font/lato_regular"
            android:text="@string/and"
            android:textColor="#999999" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_2"
            android:fontFamily="@font/lato_bold"
            android:text="@string/i_u_kho_n"
            android:textColor="#4356B4" />
    </TableRow>

    <TextView
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/dang_ki"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tr_have_account"
        app:layout_constraintEnd_toEndOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/tr_agree" />

    <TableRow
        android:id="@+id/tr_have_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_name"
        app:layout_constraintStart_toStartOf="@id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/button_register">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/c_t_i_kho_n"
            android:textColor="#999999"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_2"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/ng_nh_p_ngay"
            android:textColor="#4356B4"
            android:textSize="14sp" />
    </TableRow>
</androidx.constraintlayout.widget.ConstraintLayout>