<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/text_forget_password"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="337dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/text_forget_password"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@+id/text_name"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="135dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/quen_mat_khau"
        android:textColor="#4356B4"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_back" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_name"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="277dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/h_v_t_n"
        android:textColor="#999999"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_forget_password" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toTopOf="@+id/text_email"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#676767"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        tools:ignore="Autofill" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="335dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_name"
        app:layout_constraintBottom_toBottomOf="@+id/edit_name"
        app:layout_constraintEnd_toEndOf="@+id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="308dp"
        app:layout_constraintBottom_toTopOf="@id/edit_email"
        android:fontFamily="@font/lato_regular"
        android:text="@string/email"
        android:textColor="#999999"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/lato_regular"
        app:layout_constraintBottom_toTopOf="@+id/tv_new_password"
        android:hint="@string/yourname_gmail_com"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#676767"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email"
        tools:ignore="Autofill" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="335dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/ic_mail_login"
        app:layout_constraintBottom_toBottomOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="250dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_new_password"
        android:fontFamily="@font/lato_regular"
        android:text="@string/new_pass"
        android:textColor="#999999"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/text_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#676767"
        app:layout_constraintBottom_toTopOf="@+id/tv_confirm"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_password"
        tools:ignore="Autofill" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="335dp"
        android:src="@drawable/ic_password"
        app:layout_constraintBottom_toBottomOf="@+id/edt_new_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_password"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_login"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/x_c_nh_n"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_new_password" />

</androidx.constraintlayout.widget.ConstraintLayout>